--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesignDemo">
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,14 +25,7 @@
         <activity
             android:name=".activity.BaseActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar" />
-        <activity
-            android:name=".activity.DeviceControlActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".activity.TestActivity" />
-        <activity
-            android:name=".activity.Main2Activity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.DesignDemo"></activity>
+
     </application>
 
 </manifest>
